<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="100dp"
    tools:context=".Fragment.AddNew">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiIznos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvIznos"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Iznos u kunama" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvIznos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelIznos"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tiIznos"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="@id/tiIznos"/>

    <Switch
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:text="@string/note"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilDatum" />

    <ImageButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="change"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="@id/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/iconfinder_check"
        />
    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancel"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btnSave"
        android:src="@drawable/iconfinder_close"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabNewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_day"
        app:layout_constraintStart_toEndOf="@id/tilDatum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiIznos"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/tvDatum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelCalendar"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tilDatum"
        app:layout_constraintTop_toBottomOf="@id/tvIznos"
        app:layout_constraintBottom_toTopOf="@id/description"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDatum"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvDatum"
        app:layout_constraintTop_toBottomOf="@id/tvIznos"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@id/fabNewDate">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>